--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,11 @@ body {
 
 canvas {
 	display: block;
-	image-rendering: crisp-edges;
-	image-rendering: pixelated;
 	margin-left: auto;
 	margin-right: auto
+}
+
+.nearestNeigbour {
+	image-rendering: crisp-edges;
+	image-rendering: pixelated;
 }
